fix(BrowserTabs): keep add tab button when flex-grow overflows

--- a/app/css/browser/browser-tabs.styl
+++ b/app/css/browser/browser-tabs.styl
@@ -27,6 +27,7 @@
     flex: 1;
     // to display the create new tab button
     padding-right: 30px;
+    max-width: 97%;
     z-index: 80;
   }
 
